zishao-v410-broken-link-fix-2

--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
@@ -10,7 +10,7 @@ Before you connect to OceanBase Database by using the mysql client, make sure th
 
 * The environment variable `PATH` contains the directory where the mysql client is located. 
 
-* Before you connect to a tenant from a client, make sure that the client is in the whitelist of the tenant. For more information about how to query and configure a tenant whitelist, see [Set and view the tenant whitelist](../../6.basic-database-management/4.manage-tenants-1/6.configure-and-view-the-tenant-whitelist.md). 
+* Before you connect to a tenant from a client, make sure that the client is in the whitelist of the tenant. For more information about how to query and configure a tenant whitelist, see [Set and view the tenant allowlist](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.configure-and-view-the-tenant-whitelist.md). 
 
 ## Procedure
 
