--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -14,17 +14,17 @@ In MySQL mode of OceanBase Database, a database is a collection of database obje
 
 Before you create a database, make sure that:
 
-* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-of-mysql/1.connection-mode-overview.md). 
+* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
 
    > **Note**
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `CREATE` privilege. For more information about how to view your privileges, see [View user privileges](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/3.mysql-3/4.view-user-permissions-1.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/3.mysql-3/5.modify-user-permissions-2.md). 
+* You have the `CREATE` privilege. For more information about how to view your privileges, see [View user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md). 
 
 ## Create a database
 
-Use the [CREATE DATABASE](../../../7.reference\6.sql-syntax\2.common-tenant-mysql-mode\6.sql-statement\11.create-database.md) statement to create a database. Then, complete the creation of the database based on the suggestions and examples in this topic. 
+Use the [CREATE DATABASE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-of-mysql-mode.md) statement to create a database. Then, complete the creation of the database based on the suggestions and examples in this topic. 
 
 ## Suggestions on database creation
 
@@ -32,10 +32,10 @@ Use the [CREATE DATABASE](../../../7.reference\6.sql-syntax\2.common-tenant-mysq
 
 * In OceanBase Database, the name of each database must be globally unique. 
 
-* Do not use reserved keywords as the database name. For more information about the reserved keywords in OceanBase Database in MySQL mode, see [Reserved keywords](../../../7.reference/14.system-reference/8.reserved-keyword-in-mysql-mode.md). 
+* Do not use reserved keywords as the database name. For more information about the reserved keywords in OceanBase Database in MySQL mode, see [Reserved keywords](../../../7.reference/5.system-reference/8.reserved-keyword-of-mysql-mode.md). 
 
 * To adapt to long-term business development, the character set of the database must be able to store most characters. We recommend that you use the `UTF8` character set when you create a database.
-   For more information about the character sets supported by OceanBase Database, see [Database-level character sets](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/3.character-set-and-collation/4.specify-character-set-and-collation.md). 
+   For more information about the character sets supported by OceanBase Database, see [Database-level character sets](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md). 
 
 ## Examples
 
@@ -92,6 +92,4 @@ obclient [mwx]> SHOW CREATE DATABASE test4;
 
 ## Related topics
 
-* [Create a table](3.create-a-table.md)
-
-* [Create a table group](2.create-a-tablegroup.md)
+* [Create a table](3.create-a-table-of-mysql-mode.md)
