--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
@@ -12,7 +12,7 @@ Indexes are classified into unique and non-unique indexes.
 
 * Non-unique indexes allow duplicate values in an indexed column.
 
-For more information, see [Unique and non-unique indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-mysql-mode.md).
+<!-- For more information, see [Unique and non-unique indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-mysql-mode.md). -->
 
 Indexes on a partitioned table can be classified into local indexes and global indexes.
 
@@ -20,7 +20,7 @@ Indexes on a partitioned table can be classified into local indexes and global i
 
 * A global index has its independent partitioning rules, and one partition of a global index may point to multiple table partitions.
 
-For more information, see [Local and global indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-mysql-mode.md).
+<!-- For more information, see [Local and global indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-mysql-mode.md). -->
 
 ## Prerequisites
 
