--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data.md
@@ -6,17 +6,17 @@ After you create a table, you can use the `INSERT` statement or other statements
 
 Before you insert data into a table, make sure that:
 
-* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../../1.application-development-based-on-mysql-mode/1.database-connection/1.connection-mode-overview.md). 
+* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
 
    > **Note**
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `INSERT` privilege on the target table. For more information about how to view your privileges, see [View user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md). 
+* You have the `INSERT` privilege on the target table. For more information about how to view your privileges, see [View user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md). 
 
 ## Use the INSERT statement to insert data
 
-Use the [INSERT](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) statement to insert data into a table based on the following suggestions. 
+Use the [INSERT](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) statement to insert data into a table based on the following suggestions. 
 
 Syntax:
 
@@ -61,7 +61,7 @@ INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
 
 ### Insert a single row of data
 
-You can use the `INSERT` statement to insert a single row of data. To insert multiple records, you can execute the statement multiple times. To insert records in batches, see [Insert multiple rows of data in batches](# Insert multiple rows of data in batches). 
+You can use the `INSERT` statement to insert a single row of data. To insert multiple records, you can execute the statement multiple times. To insert records in batches, see the "Insert multiple rows of data in batches" section below. 
 
 Assume that the information about the table into which data is to be inserted is as follows:
 
@@ -163,7 +163,7 @@ You can use the `INSERT IGNORE INTO` or `INSERT INTO ON DUPLICATE KEY UPDATE` st
 
 Example:
 
-* If you use [INSERT IGNORE INTO](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) to avoid constraint conflicts, the `IGNORE` keyword can be used to ignore the impact of an insert failure caused by a constraint conflict. 
+* If you use [INSERT IGNORE INTO](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) to avoid constraint conflicts, the `IGNORE` keyword can be used to ignore the impact of an insert failure caused by a constraint conflict. 
 
    ```sql
    obclient [test]> INSERT IGNORE INTO t_insert(id, name, value)
@@ -188,7 +188,7 @@ Example:
    >
    > This method ignores only the error data but does not affect the insert operation. 
 
-* If you use [INSERT INTO ON DUPLICATE KEY UPDATE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) to avoid constraint conflicts, you can specify the action to take on duplicate primary keys or unique keys. 
+* If you use [INSERT INTO ON DUPLICATE KEY UPDATE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) to avoid constraint conflicts, you can specify the action to take on duplicate primary keys or unique keys. 
 
    > **Note**
    >
@@ -217,7 +217,7 @@ Example:
 
 ## Insert data by using other statements
 
-Besides the `INSERT` statement, you can use the `REPLACE INTO` statement instead to insert data into a table without data records or a table with data records but no primary key or unique key conflicts. For more information about the `REPLACE INTO` statement, see [REPLACE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/46.REPLACE.md). 
+Besides the `INSERT` statement, you can use the `REPLACE INTO` statement instead to insert data into a table without data records or a table with data records but no primary key or unique key conflicts. For more information about the `REPLACE INTO` statement, see [REPLACE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/76.replace-of-mysql-mode.md). 
 
 Examples:
 
