--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
@@ -12,11 +12,11 @@ Before you update the data in a table, make sure that:
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `UPDATE` privilege on the target table. For more information about how to view your privileges, see [View user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md). 
+* You have the `UPDATE` privilege on the target table. For more information about how to view your privileges, see [View user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md). 
 
 ## Update data by using the UPDATE statement
 
-Generally, the [UPDATE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/60.UPDATE.md) statement is used to update the data in a table. 
+Generally, the [UPDATE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/90.update-of-mysql-mode.md) statement is used to update the data in a table. 
 
 `Syntax`:
 
