--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data.md
@@ -6,17 +6,17 @@ After you insert data into a table, you can use the `DELETE` statement or other 
 
 Before you delete data from a table, make sure that:
 
-* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../../1.application-development-based-on-mysql-mode/1.database-connection/1.connection-mode-overview.md). 
+* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
 
    > **Note**
    >
    > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
 
-* You have the `DELETE` privilege on the target table. To use the `TRUNCATE TABLE` statement to clear the data in a table, you must also have the `CREATE` privilege on this table. For information about how to view your privileges, see [View user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md). 
+* You have the `DELETE` privilege on the target table. To use the `TRUNCATE TABLE` statement to clear the data in a table, you must also have the `CREATE` privilege on this table. For information about how to view your privileges, see [View user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md). 
 
 ## Use the DELETE statement to delete data
 
-Generally, the [DELETE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/21.DELETE.md) statement is used to delete all data or part of the data from a table. 
+Generally, the [DELETE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/32.delete-of-mysql-mode.md) statement is used to delete all data or part of the data from a table. 
 
 > **Note**
 >
@@ -85,7 +85,7 @@ Example: Use the `TRUNCATE TABLE` statement to empty the `t_insert` table.
 obclient [test]> TRUNCATE TABLE t_insert;
 ```
 
-For more information about the `TRUNCATE TABLE` statement, see [TRUNCATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/59.truncate-table.md). 
+For more information about the `TRUNCATE TABLE` statement, see [TRUNCATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/89.truncate-table-of-mysql-mode.md). 
 
 ## Related topics
 
