--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/1.about-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/1.about-query-of-mysql-mode.md
@@ -38,4 +38,4 @@ obclient> SELECT 'Medium', 6*6 ;
 1 row in set
 ```
 
-For more information about how to use query statements, see [SELECT](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/51.SELECT-1-2/1.SELECT.md). 
+For more information about how to use query statements, see [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md). 
