--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
@@ -236,6 +236,6 @@ Examples:
    6 rows in set
    ```
 
-In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](3.conditional-query.md). 
+In addition, you can use the `WHERE` condition to query specified columns. For more information, see [Conditional queries](3.conditional-query-of-mysql-mode.md). 
 
-For more information, see [Use operators and functions in queries](8.use-operators-and-functions-in-query/1.use-arithmetic-operators-in-queries.md). 
+For more information, see [Use operators and functions in queries](8.use-operators-and-functions-in-query-of-mysql-mode/1.use-arithmetic-operators-in-queries-of-mysql-mode.md). 
