--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/7.table-does-not-exists-with-error-code-1146-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/7.table-does-not-exists-with-error-code-1146-of-mysql-mode.md
@@ -19,7 +19,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 1146
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-for-mysql/1.use-error-information-1.md). 
+For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Possible causes
 
