--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc-graphical.md
@@ -94,4 +94,4 @@ Before you install ODC, ensure that:
 
 ## Subsequent operations
 
-For more information about how to verify ODC deployment, see [Verify ODC deployment](3.post-deployment-check.md).
+For more information about how to verify ODC deployment, see [Verify ODC deployment](3.post-deployment-check-odc-graphical.md).
