--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -1,8 +1,8 @@
-# Deploy a single-replica OceanBase cluster
+# Deploy a three-replica OceanBase cluster
 
-You can deploy a single-replica OceanBase cluster and add nodes to the cluster. OceanBase Database is a piece of single-process software. You only need to install the `oceanbase-xxx.rpm` and `obproxy-xxx.rpm` packages.
+A three-replica OceanBase cluster requires at least three hosts respectively located in three zones. OceanBase Database is a piece of single-process software. You only need to install the `oceanbase-xxx.rpm` and `obproxy-xxx.rpm` packages.
 
-This topic describes how to deploy a single-replica OceanBase cluster by using RPM packages.
+This topic describes how to install a three-replica OceanBase cluster through RPM packages.
 
 ## Prerequisites
 
@@ -136,25 +136,16 @@ store/
     <p>The IP addresses in the sample code are for reference only. You need to enter the actual server IP address during deployment. </p>
   </main>
 
-1. Start the observer process.
+1. Start the observer process on the nodes.
 
-   Example:
+   Start the observer process as the admin user on each node.``
 
-   ```shell
-   [root@xxx admin]# su - admin
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
-   devname: eth0
-   rpc port: 2882
-   mysql port: 2881
-   zone: zone1
-   data_dir: /home/admin/oceanbase/store/obdemo
-   rs list: 10.10.10.1:2882:2881
-   cluster id: 10001
-   appname: obdemo
-   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
-   ```
+   <main id="notice" type='notice'>
+     <h4>Notice</h4>
+     <p>With three replicas, the startup parameters are different for each node. When you start the observer process, you only need to specify three or more servers that run RootService, instead of all servers. You can add servers after the cluster is created. </p>
+   </main>
 
-   Parameters:
+   The parameters specify the data file size and memory size to accurately control the resource usage of OBServer nodes when resources are insufficient in certain environments. The following table describes these parameters:
 
    | **Parameter** | **Description** |
    |--------|----------------------------|
@@ -169,46 +160,97 @@ store/
    | `-r` | The RootService list in the format of ip:2882:2881. Multiple items are separated with semicolons (;) to indicate RootService information. This parameter is consistent on the three servers.  |
    | `-o` | The cluster startup parameters that need to be specified as needed. <ul><li>`system_memory` specifies the internal reserved memory of OceanBase Database, which is `30 GB` by default. You can adjust this parameter to a smaller value in the case of insufficient memory on the server. The impact is that memory may be insufficient during performance tests. </li><li>`datafile_size` specifies the size of the `SSTable` data file of OceanBase Database, which is determined based on the available space of `/data/1/`. You no longer need to specify the size again once specified in this step. We recommend that you specify the data file size to at least `100 GB` and reserve some spaces. <blockquote><b>Note</b></br>If `/data/1` and `/data/log1` belong to the same file system (share the same disk), ensure that the space reserved for `/data/log1` is two to four times the size of the memory. </blockquote></li><li>`config_additional_dir` specifies the redundancy directory for the parameter file. </li></ul> |
 
+   Example:
+
+   **zone1:**
+
+   ```sql
+   [root@xxx admin]# su - admin
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   devname: eth0
+   rpc port: 2882
+   mysql port: 2881
+   zone: zone1
+   data_dir: /home/admin/oceanbase/store/obdemo
+   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
+   cluster id: 10001
+   appname: obdemo
+   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   ```
+
+   **zone2:**
+
+   ```sql
+   [root@xxx admin]# su - admin
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone2 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   devname: eth0
+   rpc port: 2882
+   mysql port: 2881
+   zone: zone2
+   data_dir: /home/admin/oceanbase/store/obdemo
+   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
+   cluster id: 10001
+   appname: obdemo
+   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   ```
+
+   **zone3:**
+
+   ```sql
+   [root@xxx admin]# su - admin
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone3 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   devname: eth0
+   rpc port: 2882
+   mysql port: 2881
+   zone: zone3
+   data_dir: /home/admin/oceanbase/store/obdemo
+   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
+   cluster id: 10001
+   appname: obdemo
+   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   ```
+
    You can use the `netstat -ntlp` command to view whether the observer process has started. If ports 2881 and 2882 have been listened to, the observer process has started.
 
    Example:
 
-   ```shell
+   ```sql
    -bash-4.2$ netstat -ntlp
    (Not all processes could be identified, non-owned process info
     will not be shown, you would have to be root to see it all.)
    Active Internet connections (only servers)
    Proto Recv-Q Send-Q Local Address           Foreign Address         State       PID/Program name
-   tcp        0      0 0.0.0.0:2881            0.0.0.0:*               LISTEN      79697/observer
-   tcp        0      0 0.0.0.0:2882            0.0.0.0:*               LISTEN      79697/observer
-   ...
+   tcp        0      0 0.0.0.0:2881            0.0.0.0:*               LISTEN      45576/observer
+   tcp        0      0 0.0.0.0:2882            0.0.0.0:*               LISTEN      45576/observer
+   tcp        0      0 127.0.0.1:9001          0.0.0.0:*               LISTEN      -
+   tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN      -
    ```
 
 2. Perform the bootstrap operation on the cluster.
 
-   Connect to the started observer process by using the obclient command. The password is empty.
+   Connect to any node by using the obclient command. The password is empty.
 
-   ```sql
-   [root@xxx admin]# obclient -h127.1 -uroot@sys -P2881 -p
+   ```javascript
+   [root@xxx admin]# obclient -h127.1 -uroot -P2881 -p
    Enter password:
 
    obclient> SET SESSION ob_query_timeout=1000000000;
    Query OK, 0 rows affected
 
-   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER '10.10.10.1:2882';
+   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER '10.10.10.1:2882',ZONE 'zone2' SERVER '10.10.10.2:2882',ZONE 'zone3' SERVER '10.10.10.3:2882';
    Query OK, 0 rows affected
    ```
 
-  <main id="notice" type='notice'>
-    <h4>Notice</h4>
-    <p>If an error is reported in this step, the reason may be that the startup parameter of the observer process is incorrect, the privileges on the directories related to the observer process are incorrect, the space of the log directory does not meet the required proportion, or the node memory resources are insufficient. The log directory issue occurs because the log directory shares the same upper-level directory with the data directory, resulting in space occupation by the data directory. Check these problems and then clear the OceanBase Database directory. For more information, see <strong>Clear the OceanBase Database directory (not required at the first deployment)</strong>. </p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>Notice</h4>
+     <p>If an error is reported in this step, the reason may be that the startup parameter of the observer process is incorrect on the three nodes, the privileges on the directories related to the observer process are incorrect, the space of the log directory does not meet the required proportion, the time is not synchronous on the three nodes, or the node memory resources are insufficient. The log directory issue occurs because the log directory shares the same upper-level directory with the data directory, resulting in space occupation by the data directory. Check these problems and then clear the OceanBase Database directory. For more information, see <strong>Clear the OceanBase Database directory (not required at the first deployment)</strong>. </p>
+   </main>
 
 3. Verify whether the cluster is initialized.
 
    After you perform the bootstrap operation and execute the `SHOW DATABASES` statement, if `oceanbase` appears in the database list, the cluster has been initialized.
 
-   ```sql
+   ```bash
    obclient> SHOW DATABASES;
    +--------------------+
    | Database           |
@@ -237,4 +279,4 @@ store/
 
 * For more information about the cluster startup parameters, see [Overview](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md).
 * For more information about how to change the password of a user, see [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md).
-* After the cluster is deployed, you need to create a business tenant. For more information, see [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-tenant.md).
+* After the cluster is deployed, you need to create a business tenant. For more information, see [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md).
