--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
@@ -7,7 +7,7 @@ This topic describes how to use commands to install the RPM package of OceanBase
 <main id="notice" type='explain'>
 
   <h4>Note</h4>
-  <p>You can also add OBServer nodes to scale out a single-node cluster to a multi-node cluster that contains only one replica. For more information, see <a href="2.add-an-observer-node-to-a-zone.md">Add OBServer nodes to zones</a>. </p>
+  <p>You can also add OBServer nodes to scale out a single-node cluster to a multi-node cluster that contains only one replica. For more information, see <a href="../../../7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md">Add OBServer nodes to zones</a>. </p>
 </main>
 
 ## Prerequisites
@@ -268,6 +268,6 @@ Perform the following steps separately on two servers.
 ## References
 
 * [ALTER SYSTEM ... ZONE](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/25.zone.md)
-* [ALTER SYSTEM ... SERVER](../../../../../4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/20.SERVER.md)
+* [ALTER SYSTEM ... SERVER](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/20.SERVER.md)
 * [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)
 * [ALTER TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md)
