--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/14.delete-resource-pool.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/14.delete-resource-pool.md
@@ -10,7 +10,7 @@ Before you drop a resource pool, make sure that the resource pool is not being u
 
 * If a tenant has only one resource pool, you cannot directly drop it.
 
-   * Create a resource pool and allocate it to this tenant. Then, modify the resource pool configuration of the tenant to release the resource pool to be dropped. For more information about how to create a resource pool, see the Create a resource pool section in the [Create a tenant](3.create-tenant.md) topic.
+   * Create a resource pool and allocate it to this tenant. Then, modify the resource pool configuration of the tenant to release the resource pool to be dropped. For more information about how to create a resource pool, see the Create a resource pool section in the [Create a tenant](2.manage-create-tenant.md) topic.
    * If the tenant is no longer needed, you can drop the tenant first and then drop the resource pool. For more information, see [Drop a tenant](12.delete-tenant.md).
 
 ## Procedure
@@ -63,7 +63,7 @@ Before you drop a resource pool, make sure that the resource pool is not being u
 
 ## References
 
-* [Create a tenant](3.create-tenant.md)
+* [Create a tenant](2.manage-create-tenant.md)
 
 * [Modify attributes of a tenant](10.modify-tenant-properties.md)
 
