--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md
@@ -302,7 +302,7 @@ OceanBase Database supports two tenant modes: MySQL and Oracle. When you create 
 
    * `system_var_name`: a system variable or parameter.
 
-      * `OB_TCP_INVITED_NODES`: the whitelist of client IP addresses that are allowed to connect to this tenant. In the example, the percent sign (`%`) indicates that all clients can connect to this tenant. If `OB_TCP_INVITED_NODES` is not specified, by default, the tenant is accessible only to the clients on the server where the tenant is hosted. For more information about the connection whitelist, see [View and modify the tenant whitelist](5.view-and-set-whitelist.md).
+      * `OB_TCP_INVITED_NODES`: the whitelist of client IP addresses that are allowed to connect to this tenant. In the example, the percent sign (`%`) indicates that all clients can connect to this tenant. If `OB_TCP_INVITED_NODES` is not specified, by default, the tenant is accessible only to the clients on the server where the tenant is hosted. For more information about the connection whitelist, see [View and modify the tenant allowlist](5.view-and-set-whitelist.md).
       * `OB_COMPATIBILITY_MODE`: the compatibility mode of the tenant, which can be specified only when the tenant is created. Valid values: MySQL and Oracle. If `OB_COMPATIBILITY_MODE` is not specified, the default compatibility mode is MySQL.
 
    For more information about the `CREATE TENANT` statement, see [CREATE TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md).
@@ -391,7 +391,7 @@ OceanBase Database supports two tenant modes: MySQL and Oracle. When you create 
       ```
 ## Subsequent operations
 
-After a tenant is created, you can log on as the administrator user. For more information about how to connect to OceanBase Database, see [Connect to OceanBase Database (MySQL Mode)](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) and [Connect to OceanBase Database (Oracle Mode)](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). To log on as a regular user, you must create a regular user for the tenant and grant privileges to the user. For more information about how to create and authorize a user, see [Manage users and privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md).
+After a tenant is created, you can log on as the administrator user. For more information about how to connect to OceanBase Database, see [Connect to OceanBase Database (MySQL Mode)](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) and [Connect to OceanBase Database (Oracle Mode)](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md). To log on as a regular user, you must create a regular user for the tenant and grant privileges to the user. For more information about how to create and authorize a user, see [Manage users and privileges](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md).
 
 ## References
 
