--- a/en-US/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
+++ b/en-US/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
@@ -6,7 +6,7 @@ For more information about how to modify the locality, see [Modify locality](2.m
 
 ## Prerequisites
 
-Before you add a replica, check whether the tenant has a resource pool in the target zone. If not, modify the zone list of the existing resource pool of the tenant or add a resource pool to the tenant. When you add a resource pool, the number of units in the resource pool must be the same as that in the existing resource pool. For more information, see [Modify the attributes of a resource pool](../../../2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md) or [Create a resource pool](../../../2.tenant-management/6.common-tenant-operations/3.create-tenant.md). 
+Before you add a replica, check whether the tenant has a resource pool in the target zone. If not, modify the zone list of the existing resource pool of the tenant or add a resource pool to the tenant. When you add a resource pool, the number of units in the resource pool must be the same as that in the existing resource pool. For more information, see [Modify the attributes of a resource pool](../../../2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md) or [Create a resource pool](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md). 
 
 In addition, check the status of the resource units and the resource pool in the target zone. If OBServer nodes in the target zone do not have sufficient resources to accommodate the new resource units of the tenant, the locality cannot be modified. 
 
