--- a/en-US/6.manage/4.high-availability/2.multi-replica-disaster-recovery/1.data-link-introduction.md
+++ b/en-US/6.manage/4.high-availability/2.multi-replica-disaster-recovery/1.data-link-introduction.md
@@ -18,12 +18,12 @@ ODP can be provided as instances or SDKs. ODP SDKs are integrated into business 
 
 After ODP is introduced, a data link in OceanBase Database is as follows: AppServer <-> ODP <-> OBServer nodes. AppServer accesses ODP by using a database driver to send requests. In the distributed architecture of OceanBase Database, user data is distributed on multiple OBServer nodes through multiple log streams and multiple replicas. ODP forwards requests to the most appropriate OBServer nodes for execution and returns the execution results. Each OBServer node can also provide routing and forwarding capabilities. If an OBServer node receives a request it cannot execute, it forwards the request to the correct node. This scenario involves remote execution and has a longer request response time (RT).
 
-![Data link diagram](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-link.png)
+<!-- ![Data link diagram](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-link.png) -->
 
 As the reverse proxy layer of OceanBase Database, ODP provides routing and disaster recovery from the client to the database, so that applications are unaware of the distributed architecture of the database. An OBServer node has a SQL engine, storage engine, and distributed transaction engine, which parse SQL statements to generate and execute physical execution plans while committing transactions based on the Paxos protocol. OBServer nodes provide database services featuring high performance, high availability, and high scalability. ODP is loosely coupled to an OBServer node to tolerate incorrect routing in case that the routing information on ODP is not updated in a timely manner. The OBServer node forwards the request again. When the OBServer node returns the results, it notifies ODP to update the routing information.
 
 In the data link, AppServer sends user requests to ODP, and ODP forwards the requests to active OBServer nodes. The execution results are returned to AppServer through a reverse path. Different components in the data link contribute to high availability in different ways.
 
-## References
+<!-- ## References
 
-For more information about data links, see [Overview](../../../7.reference/1.oceanbase-database-concepts/6.data-link/1.data-link-overview.md).
+For more information about data links, see [Overview](../../../7.reference/1.oceanbase-database-concepts/6.data-link/1.data-link-overview.md). -->
