--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
@@ -6,9 +6,9 @@ When the primary tenant is available, you can switch the roles of the primary te
 
 A switchover is completed in the following three steps: preparing for the switchover, switching the primary tenant to the STANDBY role, and switching a standby tenant to the PRIMARY role.
 
-The following figure shows the switchover process.
+<!-- The following figure shows the switchover process.
 
-![Switchover process](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/switchover-process.png)
+![Switchover process](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/switchover-process.png) -->
 
 ## Prepare for the switchover
 
