--- a/en-US/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/en-US/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -4,7 +4,7 @@ OceanBase Database allows you to enable the arbitration service for a tenant whe
 
 ## Prerequisites
 
-* The arbitration service has been deployed in the cluster where the tenant resides. For more information about how to deploy the arbitration service, see **Step 4: Enable and add the arbitration service** in [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md).
+* The arbitration service has been deployed in the cluster where the tenant resides. <!-- For more information about how to deploy the arbitration service, see **Step 4: Enable and add the arbitration service** in [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md). -->
 
 * The tenant must have two or four full-featured replicas.
 
