--- a/en-US/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/en-US/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -4,7 +4,7 @@ If the OBServer node where the arbitration service is deployed fails, you can de
 
 ## Prerequisites
 
-The OceanBase Database software is installed on the new OBServer node and the arbitration service is enabled. For more information, see [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md).
+The OceanBase Database software is installed on the new OBServer node and the arbitration service is enabled. <!-- For more information, see [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md). -->
 
 ## Procedure
 
