--- a/en-US/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
+++ b/en-US/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
@@ -39,7 +39,7 @@ The arbitration service is disabled for all tenants. Otherwise, an error will be
 
 ## Subsequent operations
 
-If you want to use the arbitration service after you remove it, you must redeploy the arbitration service. For more information about how to deploy the arbitration service, see **Step 4: Enable and add the arbitration service** in [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md).
+If you want to use the arbitration service after you remove it, you must redeploy the arbitration service. <!-- For more information about how to deploy the arbitration service, see **Step 4: Enable and add the arbitration service** in [Deploy an OceanBase cluster with two replicas and the arbitration service](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md). -->
 
 ## References
 
