--- a/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -42,7 +42,7 @@ The label security feature is supported only in Oracle mode.
 
    The following statement creates a security strategy named `MY_POLICY`. 
 
-   For more information about how to create a label security strategy, see [SA_SYSDBA.CREATE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/2.sa_sysdba-policy-management-package/3.sa_sysdba-create_policy.md). 
+   For more information about how to create a label security strategy, see [SA_SYSDBA.CREATE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/2.sa-sysdba-policy-management-package-oracle/3.sa-sysdba-create-policy-oracle.md). 
 
    Example:
 
@@ -52,7 +52,7 @@ The label security feature is supported only in Oracle mode.
 
 6. Create a level and specify its short name and long name. 
 
-   For more information about how to create a level, see [SA_COMPONENTS.CREATE_LEVEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/3.sa_components-tag-package/3.sa_components-create_level.md). 
+   For more information about how to create a level, see [SA_COMPONENTS.CREATE_LEVEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/3.sa-components-tag-package-oracle/3.sa-components-create-level-oracle.md). 
 
    Example:
 
@@ -74,7 +74,7 @@ The label security feature is supported only in Oracle mode.
 
 7. Create a label and view the result. 
 
-   For more information about how to create a label, see [SA_LABEL_ADMIN.CREATE_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/4.sa_label_admin-tag-management-pack/3.sa_label_admin-create_label.md). 
+   For more information about how to create a label, see [SA_LABEL_ADMIN.CREATE_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/4.sa-label-admin-tag-management-pack-oracle/3.sa-label-admin-create-label-oracle.md). 
 
    Example:
 
@@ -139,7 +139,7 @@ The label security feature is supported only in Oracle mode.
 
    2. Log on to the database as the security administrator `LBACSYS` and apply the strategy named `MY_POLICY` to `tbl1`. 
 
-      For more information about how to apply a specified strategy to a table, see [SA_POLICY_ADMIN.APPLY_TABLE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/5.sa_policy_admin-policy-management-packs/2.sa_policy_admin-apply_table_policy.md). 
+      For more information about how to apply a specified strategy to a table, see [SA_POLICY_ADMIN.APPLY_TABLE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/2.sa-policy-admin-apply-table-policy-oracle.md). 
 
       ```shell
       obclient> CALL SA_POLICY_ADMIN.APPLY_TABLE_POLICY('MY_POLICY','user1', 'tbl1', '', '', '');
@@ -166,9 +166,9 @@ The label security feature is supported only in Oracle mode.
 
 2. Log on to the database as `user1` and set the session label and row label.
 
-   For more information about how to set a label for the current database session, see [SA_SESSION.SET_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/7.sa_session-session-management-pack/5.sa_session-set_label.md). 
+   For more information about how to set a label for the current database session, see [SA_SESSION.SET_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/7.sa-session-session-management-pack-oracle/5.sa-session-set-label-oracle.md). 
 
-   For more information about how to set the default row label for the current database session, see [SA_SESSION.SET_ROW_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package/7.sa_session-session-management-pack/6.sa_session-set_row_label.md). 
+   For more information about how to set the default row label for the current database session, see [SA_SESSION.SET_ROW_LABEL](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/7.sa-session-session-management-pack-oracle/6.sa-session-set-row-label-oracle.md). 
 
    ```shell
    obclient> CALL SA_SESSION.SET_LABEL('MY_POLICY', 'INTERNAL');
