--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/1.preparation-before-recovery.md
@@ -47,7 +47,7 @@ Backup data in OceanBase Database earlier than V4.0.0 cannot be recovered to Oce
 
    <main id="notice" type='explain'>
    <h4>Note:</h4>
-   <p><code>external_kms_info</code> is used to store specific key management information. For more information about this parameter, see <a href="../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/11.external_kms_info.md">external_kms_info</a>. </p>
+   <p><code>external_kms_info</code> is used to store specific key management information. For more information about this parameter, see <a href="../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/11.external_kms_info.md">external_kms_info</a>. </p>
    </main>
 
 5. Confirm the recovery configuration.
