--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-a-user-of-oracle-mode.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-a-user-of-oracle-mode.md
@@ -6,7 +6,7 @@ This topic describes how to create a user.
 
 You may need to create users and grant them privileges in OceanBase Database as needed. To create a user, you must have the `CREATE USER` privilege.
 
-By default, only cluster and tenant administrators have the `CREATE USER` privilege. Other users can create a user only after they are granted the `CREATE USER` privilege. For more information, see [Modify user privileges](../2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md).
+By default, only cluster and tenant administrators have the `CREATE USER` privilege. Other users can create a user only after they are granted the `CREATE USER` privilege. For more information, see [Modify user privileges](../../../../../2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)
 
 ## Naming rules for usernames
 
@@ -61,7 +61,7 @@ Notes:
 
 * `PRIMARY_ZONE`: the primary zone of the user.
 
-   For more information about the primary zone, see [Primary zone](../../../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md).
+   <!-- For more information about the primary zone, see [Primary zone](../../../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md). -->
 
 Create a user named `test2` and grant the user only the database connection privilege.
 
