--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/3.data-compression/1.data-compression-overview.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/3.data-compression/1.data-compression-overview.md
@@ -34,6 +34,6 @@ OceanBase Database selects an appropriate encoding algorithm when it analyzes da
 
 OceanBase Database also provides a variety of other encoding methods, such as prefix encoding, hex encoding, column equal encoding, and column substring encoding. During major compaction, OceanBase Database selects an appropriate encoding method based on the data characteristics and calculates the compression ratio of the data. If the compression ratio is low, OceanBase Database rolls back the encoding and selects another encoding method. This mechanism ensures that the data encoding process does not undermine the data writing performance. If you are familiar with the data characteristics, you can also manually specify the encoding method during table creation.
 
-## More information
+<!-- ## More information
 
-For more information about data compression and encoding, see [Compression and encoding](../../../../1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/4.compression-and-encoding.md).
+For more information about data compression and encoding, see [Compression and encoding](../../../../1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/4.compression-and-encoding.md). -->
