--- a/en-US/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/en-US/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -20,7 +20,7 @@ You have created a DBLink. For more information about how to create a DBLink, se
 
 * When you use a DBLink to write data to a remote database, OceanBase Database automatically enables local and remote XA transactions.
 
-   For more information about XA transactions, see [XA transactions](../../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/9.xa-transactions.md).
+   <!-- For more information about XA transactions, see [XA transactions](../../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/9.xa-transactions.md). -->
 
 * After you write data to the remote database by using a DBLink, you must use the `COMMIT` or `ROLLBACK` statement to commit or roll back the local and remote XA transactions.
 
