--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/127.dbms-random-oracle/1.dbms-random-overview-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/127.dbms-random-oracle/1.dbms-random-overview-oracle.md
@@ -34,7 +34,7 @@ The following table describes the DBMS_OUTPUT subprograms supported by the curre
 
 | **Subprogram** | **Description** |
 |--------------------------------------|---------------------------------------------------|
-| [INITIALIZE](2.initialize-oracle.md) | Initializes the package by using a seed.  |
+| [INITIALIZE](2.initialize-random-oracle.md) | Initializes the package by using a seed.  |
 | [NORMAL](3.normal-oracle.md) | Returns random numbers in a normal distribution.  |
 | [RANDOM](4.random-oracle.md) | Returns a random number.  |
 | [SEED](5.seed-oracle.md) | Resets the seed.  |
