--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/1.dbms-scheduler-overview-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/1.dbms-scheduler-overview-oracle.md
@@ -31,10 +31,10 @@ The following table describes the `DBMS_SCHEDULER` subprograms supported by the 
 | [CREATE_JOB](2.create-job-oracle.md) | Creates a job.  |
 | [CREATE_PROGRAM](3.create-program-oracle.md) | Creates a program.  |
 | [DEFINE_PROGRAM_ARGUMENT](4.define-program-argument-oracle.md) | Defines a program argument whose value can be passed to a program as a string literal.  |
-| [DISABLE](5.disable-oracle.md) | Disables a program or job.  |
+| [DISABLE](5.disable-scheduler-oracle.md) | Disables a program or job.  |
 | [DROP_JOB](6.drop-job-oracle.md) | Drops a job or all jobs in a job class.  |
 | [DROP_PROGRAM](7.drop-program-oracle.md) | Drops a program.  |
-| [ENABLE](8.enable-oracle.md) | Enables a program or job.  |
+| [ENABLE](8.enable-scheduler-oracle.md) | Enables a program or job.  |
 | [GENERATE_JOB_NAME](9.generate-job-name-oracle.md) | Generates a unique name for a job.  |
 | [RUN_JOB](10.run-job-oracle.md) | Immediately executes a job.  |
 | [SET_ATTRIBUTE](11.set-attribute-oracle.md) | Changes the attributes of a job, program, or another Scheduler object.  |
