--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/261.utl-file-oracle/1.utl-file-overview-oracle.md
@@ -78,9 +78,9 @@ The following table describes the `UTL_FILE` subprograms supported by the curren
 | [FREMOVE](6.fremove-oracle.md) | Deletes a file from the disk. (You must have the required delete privilege.) It is similar to the `rm` command in UNIX.  |
 | [FRENAME](7.frename-oracle.md) | Renames an existing file. It is similar to the `mv` command in UNIX.  |
 | [FSEEK](8.fseek-oracle.md) | Adjusts the accessed position forward or backward in a file by the specified number of bytes.  |
-| [NEW_LINE](9.new-line-oracle.md) | Writes one or more OS-specified line terminators to a file.  |
-| [GET_LINE](10.get-line-oracle.md) | Reads a line of text.  |
-| [PUT](11.put-oracle.md) | Writes a string to a file.  |
-| [PUT_LINE](12.put-line-oracle.md) | Writes a line to a file and appends an OS-specified line terminator.  |
+| [NEW_LINE](9.new-line-utl-oracle.md) | Writes one or more OS-specified line terminators to a file.  |
+| [GET_LINE](10.get-line-utl-oracle.md) | Reads a line of text.  |
+| [PUT](11.put-utl-oracle.md) | Writes a string to a file.  |
+| [PUT_LINE](12.put-line-utl-oracle.md) | Writes a line to a file and appends an OS-specified line terminator.  |
 
 
