--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/53.dbms-debug-oracle/1.dbms-debug-overview-oracle.md
@@ -75,7 +75,7 @@ The following table describes the `DBMS_DEBUG` subprograms supported by the curr
 | [GET_VALUES](11.get-values-oracle.md)                       | Returns information about all the variables in the current stack frame. |
 | [GET_RUNTIME_INFO](12.get-runtime-info-oracle.md)           | Returns information about the current program.                          |
 | [GET_TIMEOUT_BEHAVIOUR](13.get-timeout-behaviour-oracle.md) | Returns the current timeout behavior.                                   |
-| [INITIALIZE](14.initialize-oracle.md)                       | Sets a debug ID in the target session.                                  |
+| [INITIALIZE](14.initialize-debug-oracle.md)                       | Sets a debug ID in the target session.                                  |
 | [PROBE_VERSION](15.probe-version-oracle.md)                 | Returns the version number of DBMS_DEBUG on the server.                 |
 | [PRINT_BACKTRACE](16.print-backtrace-oracle.md)             | Prints a backtrace list of the current execution stack.                 |
 | [SET_TIMEOUT](17.set-timeout-oracle.md)                     | Sets the timeout value.                                                 |
