--- a/en-US/7.reference/7.command-line-tools/8.ob-admin/3.clog/5.transaction-information-of-clog.md
+++ b/en-US/7.reference/7.command-line-tools/8.ob-admin/3.clog/5.transaction-information-of-clog.md
@@ -9,7 +9,7 @@ Based on the transaction operation type and the distribution of accessed data, t
 * Local transaction: The information about a local transaction is maintained on the same OBServer node as the one that stores data accessed by the transaction. Such a transaction accesses only data in the same partition. 
 * Distributed transaction: The information about a distributed transaction is maintained on a different node from the one that stores data accessed by the transaction. Such a transaction accesses data in multiple partitions. 
 
-For more information about transaction types, see [Local transaction](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/7.local-transaction.md) and [Distributed transaction](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/8.distributed-transactions-1/1.overview-of-distributed-transactions.md). 
+<!-- For more information about transaction types, see [Local transaction](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/7.local-transaction.md) and [Distributed transaction](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/8.distributed-transactions-1/1.overview-of-distributed-transactions.md).  -->
 
 ## Transaction log types
 
