--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
@@ -20,13 +20,13 @@ General SQL hints include:
 
    > **Note**
    >
-   > `READ_CONSISTENCY` hint: specifies the consistency level for the current query. For complete read/write splitting, routing and other parameters must be specified. The read/write splitting feature of OceanBase Database depends on the logical data center (LDC) feature of OBProxy. If you want to use the read/write splitting feature, we recommend that you configure the LDC first. For more information about read/write splitting, see [Read/write splitting](../../../3.user-guide/5.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting-1.md). 
+   > `READ_CONSISTENCY` hint: specifies the consistency level for the current query. For complete read/write splitting, routing and other parameters must be specified. The read/write splitting feature of OceanBase Database depends on the logical data center (LDC) feature of OBProxy. If you want to use the read/write splitting feature, we recommend that you configure the LDC first. For more information about read/write splitting, see [Read/write splitting](../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md). 
 
 * `INDEX` hint: instructs the optimizer to use an index scan for the specified table. 
 
 * `QUERY_TIMEOUT` hint: instructs the server to set the execution timeout period for an SQL statement, in us. 
 
-For more information about other general SQL hints, see [Comments](../../6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/7.annotation.md). 
+For more information about other general SQL hints, see [Comments](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/7.annotation-of-mysql-mode.md). 
 
 ## Example of using SQL hints
 
