--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
@@ -18,7 +18,7 @@ In OceanBase Database, you can commit transactions explicitly or implicitly. To 
 
       > **Note**
       >
-      > If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. For more information about transaction isolation levels, see [Transaction isolation levels](../../7.reference/1.concepts-of-oceanbase-database-system/8.transaction-management-1/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/3.mysql-7.md). 
+      > If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. <!-- For more information about transaction isolation levels, see [Transaction isolation levels](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/3.transaction-isolation-level-of-mysql-mode.md).  -->
 
 * If transactions are committed implicitly, namely, when `autocommit` set to `1`, each SQL statement is a transaction. In this case, you do not need to proactively commit the entire transaction.<g id="1" type="CODE" text="`"></g type="CODE" text="`"> After an SQL statement is executed, the modifications that it makes become permanent. You cannot use the `ROLLBACK` statement to roll back these modifications. 
 
@@ -122,4 +122,4 @@ obclient [test]> SELECT * FROM ordr;
 
 ## Related topics
 
-* [Start a transaction](2.start-a-transaction.md)
+* [Start a transaction](2.start-a-transaction-of-mysql-mode.md)
