--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/5.roll-back-transactions-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/5.roll-back-transactions-of-mysql-mode.md
@@ -82,7 +82,7 @@ In this example, `BEGIN` is used to start a transaction. Before `COMMIT` is used
 
 ## Roll back a transaction to a savepoint
 
-If savepoints are set for a transaction, you can use the `ROLLBACK TO SAVEPOINT` statement to roll back the transaction to a savepoint. For more information about transaction savepoints, see [Transaction savepoints](3.transaction-savepoints-of-mysql/1.mark-a-savepoint.md). 
+If savepoints are set for a transaction, you can use the `ROLLBACK TO SAVEPOINT` statement to roll back the transaction to a savepoint. For more information about transaction savepoints, see [Transaction savepoints](3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md). 
 
 After you roll back a transaction to a specific savepoint:
 
@@ -102,10 +102,10 @@ ROLLBACK TO SAVEPOINT pointname;
 
 `pointname` specifies the name of the transaction savepoint. 
 
-For more information about how to roll back a transaction to a savepoint, see [Roll back a transaction to a savepoint](3.transaction-savepoints-of-mysql/2.rollback-to-a-savepoint.md). 
+For more information about how to roll back a transaction to a savepoint, see [Roll back a transaction to a savepoint](3.transaction-savepoints-of-mysql-mode/2.rollback-to-a-savepoint-of-mysql-mode.md). 
 
 ## Related topics
 
-* [Commit a transaction](4.submit-transaction.md)
+* [Commit a transaction](4.submit-transaction-of-mysql-mode.md)
 
-* [Transaction savepoints](3.transaction-savepoints-of-mysql/1.mark-a-savepoint.md)
+* [Transaction savepoints](3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
