--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -20,7 +20,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 1045
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-for-mysql/1.use-error-information-1.md). 
+For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Troubleshooting procedure
 
@@ -41,7 +41,7 @@ Take the following steps to change the password for a user and log on again.
 
    > **Note**
    >
-   > When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see [Set password complexity rules](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\2.set-password-complexity-1.md). 
+   > When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see [Set password complexity rules](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md). 
 
 3. Use the `ny1` account to log on to the database again. 
 
