--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp-graphical.md
@@ -24,7 +24,7 @@ Before you install OCP, ensure that:
 
 3. On the **Service Management** page, click **Install Product** in the upper-right corner, and choose **Install OCP**.
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/1%E5%AE%89%E8%A3%85OCP.png)
+   <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/1%E5%AE%89%E8%A3%85OCP.png) -->
 
 4. On the **Install OCP** page, configure the parameters.
 
@@ -42,7 +42,7 @@ Before you install OCP, ensure that:
    | Multi-cluster Mode | Specifies whether to enable the multi-cluster deployment mode.  |
    | Log Directory | The log storage path of OCP. Default value: `/home/admin/logs/ocp`.  |
 
-   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/2%E5%9F%BA%E7%A1%80%E9%85%8D%E7%BD%AE.png)
+   <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/2%E5%9F%BA%E7%A1%80%E9%85%8D%E7%BD%AE.png) -->
 
    The following table describes the MetaDB parameters of OCP.
 
@@ -81,7 +81,7 @@ Before you install OCP, ensure that:
 
 ## Subsequent operations
 
-For more information about how to verify OCP deployment, see [Verify OCP deployment](3.post-deployment-check.md).
+For more information about how to verify OCP deployment, see [Verify OCP deployment](3.post-deployment-check-ocp-graphical.md).
 
 ## References
 
