--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/3.restart-a-node.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/3.restart-a-node.md
@@ -142,7 +142,7 @@ This topic describes how to restart a single node in a cluster. To restart multi
       <p>You can start only one observer process on a node in the deployment directory. To start the observer processes on multiple nodes, log on to the corresponding servers one by one and repeat the procedure.</p>
       </main>
 
-      For more information about the installation directory of OceanBase Database, see [Structure of the OBServer installation directory](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md).
+      <!-- For more information about the installation directory of OceanBase Database, see [Structure of the OBServer installation directory](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md). -->
 
 7. Execute the following statement to start the node.
 
