--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/4.add-a-node.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/4.add-a-node.md
@@ -36,7 +36,7 @@ The multi-replica deployment capability of OceanBase Database contributes to its
 
       <main id="notice" type='explain'>
       <h4>Note</h4>
-      <p>A physical server is considered to be synchronous with the clock source server when the clock offset between them is 50 ms or lower. The allowed clock offset of an OceanBase cluster cannot exceed 100 ms. When the clock offset exceeds 100 ms, no leader is available. For more information about how to configure clock synchronization, see <a href="../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/3.configure-clock-source.md">Configure the clock source</a>. </p>
+      <p>A physical server is considered to be synchronous with the clock source server when the clock offset between them is 50 ms or lower. The allowed clock offset of an OceanBase cluster cannot exceed 100 ms. When the clock offset exceeds 100 ms, no leader is available. For more information about how to configure clock synchronization, see <a href="../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/3.configure-clock-source-command-line.md">Configure the clock source</a>. </p>
       </main>
 
       ```shell
@@ -227,7 +227,7 @@ You can add nodes for elastic scaling or deployment adjustment.
 
    * [Adjust unit number](../../2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md)
 
-   * [Create a tenant](../../2.tenant-management/6.common-tenant-operations/3.create-tenant.md)
+   * [Create a tenant](../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)
 
 * Deployment adjustment: You can adjust the deployment mode of a cluster from three IDCs in the same city to five IDCs across three regions, and migrate a zone from one IDC to another when an IDC is to be demolished. In this scenario, you must first add a zone, then add nodes to the zone, and finally modify the locality of the tenant. For more information about how to modify the locality of a tenant, see [Change the locality](../../3.replica-management/2.replica-distribution/2.locality-common-operations/2.modify-locality.md).
 
