--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -10,7 +10,7 @@ You can bind the SQL statements executed by a specific user to a specified resou
 
    If you need to implement only isolation of input/output operations per second (IOPS) resources, you do not need to configure cgroups.
 
-* The user for which resource isolation is to be implemented has been created. For more information, see [Create a user](../../../2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md).
+* The user for which resource isolation is to be implemented has been created. For more information, see [Create a user](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-a-user-of-oracle-mode.md).
 
 ## Background
 
