--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md
@@ -94,7 +94,7 @@ This topic describes how to configure the cgroup system directory on one OBServe
 
 ### Step 2: Deploy OceanBase Database
 
-After the cgroup system directory is configured, you can deploy OceanBase Database.  For the deployment procedure, see [Deploy OceanBase Database](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md).
+After the cgroup system directory is configured, you can deploy OceanBase Database. <!-- For the deployment procedure, see [Deploy OceanBase Database](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md). -->
 
 ### Step 3: Establish a soft link to OceanBase Database
 
