--- a/en-US/6.manage/4.high-availability/2.multi-replica-disaster-recovery/2.proxy-high-availability-for-disaster-recovery.md
+++ b/en-US/6.manage/4.high-availability/2.multi-replica-disaster-recovery/2.proxy-high-availability-for-disaster-recovery.md
@@ -6,6 +6,6 @@ As ODP does not have any persistent data, it accesses OceanBase Database to obta
 
 ODP monitors the cluster status in real-time, checking the health status of each OBServer node and the real-time location of each partition by obtaining the cluster system table. Additionally, ODP monitors the service status of OBServer nodes based on network connections. When ODP detects exceptions, it marks the corresponding OBServer nodes as failed and switches services to functioning OBServer nodes.
 
-## References
+<!-- ## References
 
-For more information about ODP, see [Overview](../../../7.reference/1.oceanbase-database-concepts/6.data-link/2.database-proxy/1.agent-overview.md).
+For more information about ODP, see [Overview](../../../7.reference/1.oceanbase-database-concepts/6.data-link/2.database-proxy/1.agent-overview.md). -->
