--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -32,7 +32,7 @@ The preparations before recovery are complete. For more information, see [Prepar
 
 3. Set the `restore_concurrency` parameter.
 
-   `restore_concurrency` specifies whether recovery is allowed in the cluster. Default value: 0. Value range: [0, 512]. This parameter is obsolete in OceanBase Database V4.1 and later versions. For more information about the `restore_concurrency` parameter, see [restore_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md).
+   `restore_concurrency` specifies whether recovery is allowed in the cluster. Default value: 0. Value range: [0, 512]. This parameter is obsolete in OceanBase Database V4.1 and later versions.
 
    ```shell
    obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
@@ -144,6 +144,6 @@ After you initiate a recovery job, you can query the corresponding views to chec
 
 Physical recovery is associated with the physical standby database. A physically recovered tenant serves as a standby tenant. You can change its role to the primary tenant based on your business needs. For more information about how to change the role of a backup tenant to the primary tenant, see [Change the role of a backup tenant to the primary tenant](6.active-standby-tenant.md).
 
-## References
+<!-- ## References
 
-For more information about recovery, see [Recovery architecture](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md).
+For more information about recovery, see [Recovery architecture](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md). -->
