--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/1.zone-management-overview.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/1.zone-management-overview.md
@@ -19,6 +19,6 @@ The current version supports the following types of zones:
 
 ## More information
 
-For more information about the primary zone, see [Primary zone](../../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md).
+<!-- For more information about the primary zone, see [Primary zone](../../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md). -->
 
 For more information about replicas, see [Replica overview](../../../4.replica-management/4.manage-replicas/1.replica-overview.md).
