--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/1.overview-of-oceanbase-threads.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/1.overview-of-oceanbase-threads.md
@@ -28,6 +28,6 @@ OceanBase Database threads are classified into the following types:
 
 Each tenant has specific tenant threads that execute requests of the tenant. System threads ensure the normal running of the observer process on the node, process requests, and are shared by tenants.
 
-## More information
+<!-- ## More information
 
-For more information about OceanBase Database threads, see [Overview](../../../1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/1.thread-introduction.md).
+For more information about OceanBase Database threads, see [Overview](../../../1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/1.thread-introduction.md). -->
