--- a/en-US/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
+++ b/en-US/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
@@ -4,7 +4,7 @@ This topic describes how to create an index.
 
 ## Background
 
-OceanBase Database allows you to create an index on both partitioned and non-partitioned tables. An index can be either a local index or a global index. In addition, it can be a unique index, a non-unique index, or a SPATIAL index. A local unique index on a partitioned table must include a partitioning key of the table. For more information about indexes, see [Overview](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/1.index-overview-of-mysql-mode.md).
+OceanBase Database allows you to create an index on both partitioned and non-partitioned tables. An index can be either a local index or a global index. In addition, it can be a unique index, a non-unique index, or a SPATIAL index. A local unique index on a partitioned table must include a partitioning key of the table. <!-- For more information about indexes, see [Overview](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md). -->
 
 This topic describes how to create an index on a non-partitioned table. For information about how to create an index on a partitioned table, see [Create an index on a partitioned table](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md).
 
@@ -148,7 +148,7 @@ Note the following limits when you create a SPATIAL index:
 
    For more information about SRID, see [SRS](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/2.spacial-reference-system-of-mysql-mode.md).
 
-* You can create a SPATIAL index only on columns of spatial data types. For more information about the supported spatial data types, see [Overview](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.SPATIAL-data-type-of-mysql-mode/1.SPATIAL-data-type-overview-of-mysql-mode.md).
+* You can create a SPATIAL index only on columns of spatial data types. <!-- For more information about the supported spatial data types, see [Overview](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md). -->
 
 * You can create a SPATIAL index only on columns that have the `NOT NULL` constraint.
 
