--- a/en-US/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/en-US/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -247,7 +247,7 @@ This topic describes cluster- and tenant-level parameters in OceanBase Database.
 | [ssl_client_authentication](3.cluster-level-configuration-items/194.ssl_client_authentication.md) | Specifies whether to enable SSL authentication.  |
 | [stack_size](3.cluster-level-configuration-items/196.stack_size.md) | The size of the function call stack for programs.  |
 | [tenant_task_queue_size](3.cluster-level-configuration-items/216.tenant_task_queue_size.md) | The request queue size of each tenant.  |
-| [zone](3.cluster-level-configuration-items/233.zone.md) | The name of the zone where the node is located. This parameter is generally left unspecified.  |
+| [zone](3.cluster-level-configuration-items/233.zone-parameter.md) | The name of the zone where the node is located. This parameter is generally left unspecified.  |
 | [ssl_external_kms_info](3.cluster-level-configuration-items/195.ssl_external_kms_info.md) | The information that the SSL feature of OceanBase Database relies on, which is recorded in JSON strings for different SSL modes. Such a JSON string contains at least the `ssl_mode` field.  |
 | [recyclebin_object_expire_time](3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md) | The period during which a schema object can be retained in the recycle bin. After the period elapses, the object will be purged from the recycle bin.  |
 | [default_row_format](3.cluster-level-configuration-items/59.default_row_format.md) | The default row format used in table creation in MySQL mode.  |
